mxslc/tests/data/error/keyword_as_identifier.mxsl

float add_one(float in)
{
    float out = in + 1.0;
    return out;
}
